fixed padding in topNav to have correct alignment

--- a/src/shell/components/global-sidebar/GlobalSidebar.less
+++ b/src/shell/components/global-sidebar/GlobalSidebar.less
@@ -6,7 +6,7 @@
 
   .topMenu {
     grid-auto-rows: 46px min-content 1fr max-content;
-    padding: 8px 10px;
+    padding: 8px 7px;
 
     display: grid;
     align-items: flex-end;
